2011-11-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-display-inline-fontify): Make the font-lock variables
	buffer-local instead of binding them to avoid warnings.  Also demote
	errors (bug#10063).
	(font-lock-mode-hook): Shut up byte compiler.

2011-11-20  Juanma Barranquero  <lekktu@gmail.com>

	* mm-util.el (mm-charset-after):
	* nnir.el (nnir-run-hyrex):
	* ntlm.el (ntlm-build-auth-request, ntlm-build-auth-response)
	(ntlm-get-password-hashes, ntlm-md4hash):
	* smime.el: Fix typo.

2011-11-20  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-agent.el (gnus-agent-expire-group-1):
	* nndiary.el (nndiary-last-occurence):
	* nnimap.el (nnimap-request-set-mark):
	* nnmairix.el (nnmairix-only-use-registry):
	* gnus-group.el (gnus-group-prepare-flat):
	* gnus-sum.el (gnus-decode-encoded-word-methods):
	* message.el (message-wash-subject):
	* nntp.el (nntp-retrieve-headers-with-xover):
	* smime.el (smime-certificate-directory): Spelling fix.

2011-11-19  Paul Eggert  <eggert@cs.ucla.edu>

	* nnmail.el (nnmail-get-new-mail-1): Remove unused local variables.

	* color.el:
	* gnus-agent.el (gnus-agent-possibly-alter-active):
	* gnus-dired.el (gnus-dired-print):
	* mail-parse.el:
	* nnmairix.el (nnmairix-request-group):
	* shr.el (shr-image-displayer):
	* sieve-manage.el:
	* spam.el (spam-autodetect-recheck-messages): Spelling fix.

2011-11-18  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-sum.el (gnus-auto-select-subject):
	* spam-report.el (spam-report-resend): Spelling fix.

2011-11-17  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-agent.el (gnus-agent-get-undownloaded-list):
	* gnus-art.el (gnus-default-article-saver):
	* gnus-srvr.el (gnus-server-copy-server):
	* gnus.el (gnus-sloppily-equal-method-parameters):
	* html2text.el (html2text-format-tag-list):
	* message.el (message-narrow-to-head):
	* nndiary.el:
	* nnmairix.el (nnmairix-determine-original-group-from-registry):
	* sieve.el: Spelling fix.

2011-11-16  Juanma Barranquero  <lekktu@gmail.com>
